fix for screen squish / login bug

--- a/octoprint_mgsetup/static/css/overrides.css
+++ b/octoprint_mgsetup/static/css/overrides.css
@@ -139,5 +139,9 @@ a {
   } 
 
 
+.nav-collapse.in 
+{
+  height:auto !important;
+}
 
 
